src/parse/snapshots/blis__parse__parser__tests__test_programs__hello.blis.ast.snap
---
source: src/parse/parser.rs
description: "println(\"Hello, World!\");\n"
input_file: test_programs/hello.blis
---
Program(
  decls: [
    Statement(Expression(LogicOr(LogicOr(
      first: LogicAnd(
        first: Value(Value(Value(Value(Value(Call(Value(Atom(Identifier(Identifier(
          name: "println",
        )))), [
          LogicOr(LogicOr(
            first: LogicAnd(
              first: Value(Value(Value(Value(Value(Value(Atom(Literal(String("Hello, World!"))))))))),
              rest: [],
            ),
            rest: [],
          )),
        ])))))),
        rest: [],
      ),
      rest: [],
    )))),
  ],
)
