src/parse/snapshots/blis__parse__parser__tests__test_programs__one.blis.ast.snap
---
source: src/parse/parser.rs
description: "1;\n"
input_file: test_programs/one.blis
---
Program(
  decls: [
    Statement(Expression(LogicOr(LogicOr(
      first: LogicAnd(
        first: Value(Value(Value(Value(Value(Value(Atom(Literal(Integer((1, [
          1,
        ])))))))))),
        rest: [],
      ),
      rest: [],
    )))),
  ],
)
